--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
         "build": "electron-builder"
     },
     "build": {
-        "publish": [{
-            "provider": "github",
-            "owner": "AminAbbar",
-            "repo": "Holy-Quran-Library",
-            "private": false
-        }]
+        "icon": "src/imgs/logo.png",
+        "publish": [
+            {
+                "provider": "github",
+                "owner": "AminAbbar",
+                "repo": "Holy-Quran-Library",
+                "private": false
+            }
+        ]
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^0.27.2",
+        "electron-is-dev": "^2.0.0",
+        "electron-log": "^4.4.8",
         "fs": "^0.0.1-security",
         "get-mp3-duration": "^1.0.0",
         "path": "^0.12.7",
@@ -28,6 +34,7 @@
     },
     "devDependencies": {
         "electron": "^20.1.4",
-        "electron-builder": "^23.3.3"
+        "electron-builder": "^23.3.3",
+        "electron-updater": "^5.2.1"
     }
 }
