--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "electron .",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "electron-builder"
+        "build": "electron-builder -p always"
     },
     "build": {
         "icon": "src/imgs/logo.png",
@@ -26,6 +26,7 @@
         "axios": "^0.27.2",
         "electron-is-dev": "^2.0.0",
         "electron-log": "^4.4.8",
+        "electron-updater": "^5.2.1",
         "fs": "^0.0.1-security",
         "get-mp3-duration": "^1.0.0",
         "path": "^0.12.7",
@@ -34,7 +35,6 @@
     },
     "devDependencies": {
         "electron": "^20.1.4",
-        "electron-builder": "^23.3.3",
-        "electron-updater": "^5.2.1"
+        "electron-builder": "^23.3.3"
     }
 }
